feat: add foxya event and health telegram monitor
